--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <canvas id="myCanvas" width="800" height="600" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
-<script type="module" src="script.js"></script>
+<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
